@@ -198,24 +198,32 @@ as.data.frame.list <-
 }
 
 as.data.frame.vector <- function(x, row.names = NULL, optional = FALSE, ...,
-                                 nm = paste(deparse(substitute(x),
-                                 width.cutoff = 500L), collapse=" ")  )
+				 nm = paste(deparse(substitute(x),
+						    width.cutoff = 500L),
+					    collapse = " "))
 {
     force(nm)
     nrows <- length(x)
+    ## ## row.names -- for now warn about and "forget" illegal row.names
+    ## ##           -- can simplify much (move this *after* the is.null(.) case) once we stop() !
+    if(!(is.null(row.names) || (is.character(row.names) && length(row.names) == nrows))) {
+	warning(gettextf(
+	    "'row.names' is not a character vector of length %d -- omitting it. Will be an error!",
+	    nrows), domain = NA)
+	row.names <- NULL
+    }
     if(is.null(row.names)) {
 	if (nrows == 0L)
 	    row.names <- character()
-	else if(length(row.names <- names(x)) == nrows &&
-		!anyDuplicated(row.names)) {}
-	else row.names <- .set_row_names(nrows)
+	else if(length(row.names <- names(x)) != nrows || anyDuplicated(row.names))
+	    row.names <- .set_row_names(nrows)
     }
+    ## else if(length(row.names) != nrows) # same behavior as the 'matrix' method
+    ##     row.names <- .set_row_names(nrows)
     if(!is.null(names(x))) names(x) <- NULL # remove names as from 2.0.0
     value <- list(x)
     if(!optional) names(value) <- nm
-    attr(value, "row.names") <- row.names
-    class(value) <- "data.frame"
-    value
+    structure(value, row.names = row.names, class = "data.frame")
 }
 
 as.data.frame.ts <- function(x, ...)
@@ -342,7 +350,6 @@ as.data.frame.array <- function(x, row.names = NULL, optional = FALSE, ...)
 
 as.data.frame.AsIs <- function(x, row.names = NULL, optional = FALSE, ...)
 {
-    ## why not remove class and NextMethod here?
     if(length(dim(x)) == 2L)
 	as.data.frame.model.matrix(x, row.names, optional)
     else { # as.data.frame.vector without removing names
